Fixed some layout issues

--- a/_about.scss
+++ b/_about.scss
@@ -8,7 +8,7 @@
   justify-content: space-evenly;
   h2 {
     font-size: 4rem;
-    padding: 5% 0;
+    padding: 8% 0;
   }
   p {
     font-size: 2.5rem;
