--- a/_contact.scss
+++ b/_contact.scss
@@ -3,6 +3,7 @@
   grid-column-end: 3;
   min-height: 100vh;
   margin-top: 10%;
+  padding-top: 8%;
   h2 {
     font-size: 4rem;
   }
@@ -38,7 +39,7 @@
 }
 
 #contactemoi {
-  padding-top: 5%;
+  padding-top: 3%;
   font-size: 2.5rem;
   font-weight: bold;
   padding-bottom: 50px;
